--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>
                 Arroba agora não pesa <br>
                 É parte de um endereço <br>
-                Ponto final nem se usa br
+                Ponto final nem se usa <br>
                 Ou vai até no começo <br>
                 Agora é .com <br>
                 Se o saite é muito bom <br>
